<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GColor"
    tools:context=".RegisterPage">


    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/nosifer"
        android:text="@string/registrate"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLyPhoneRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegister">

        <EditText
            android:id="@+id/editTextPhoneRegister"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:height="100dp"
            android:background="@drawable/borde_redondo"
            android:ems="10"
            android:gravity="center"
            android:hint="Email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLyPassRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLyPhoneRegister"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/editTextPasswordRegsiter"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@drawable/borde_redondo"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:hintEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLyPassRepeat"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLyPassRegister"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/editTextPasswordRepeat"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@drawable/borde_redondo"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            app:hintEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/borde_redondo"
        android:gravity="center"
        android:text="@string/confirmar"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLyPassRepeat"/>

</androidx.constraintlayout.widget.ConstraintLayout>